Added filter in client services
